<resources>
    <string name="app_name">도난 Monitoring App</string>
    <string name="device_state">디바이스 최신 상태</string>
    <string name="sound">소리 크기(db): </string>
    <string name="light">밝기 정도(0~100): </string>
    <string name="buzzer">도난 부저 상태: </string>
    <string name="change_buzzer">부저 상태(ON/OFF): </string>
    <string name="kioskA">키오스크 A: </string>
    <string name="kioskB">키오스크 B: </string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="show_devices">디바이스 목록 조회</string>
    <string name="update_devices">최근 센서값 조회 \n 도난 부저 제어</string>
    <string name="log_devices">디바이스 로그 조회</string>
    <string name="warning">*키오스크를 선택하고 조회 버튼을 누르세요*</string>
    <string name="show_graph">*차트 보기*</string>
</resources>
