<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/listThingsBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="12dp"
            android:text="@string/show_devices"
            android:textSize="24sp"
            android:background="@color/lightgreen"/>

        <Button
            android:id="@+id/thingShadowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_devices"
            android:textSize="24sp"
            android:background="@color/lightblue"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/listLogsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_devices"
            android:textSize="24sp"
            android:background="@color/thistle"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/listChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_graph"
            android:textSize="24sp"
            android:background="@color/thistle"
            android:layout_marginBottom="12dp"/>


        <ImageView
            android:id="@+id/monitor_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/listLogsBtn"
            app:srcCompat="@mipmap/monitor_image_background" />
    </LinearLayout>

</LinearLayout>